让scl模型编译通过